Fixed shadow for navbar on mobile

--- a/src/css/root.css
+++ b/src/css/root.css
@@ -458,7 +458,7 @@
     background-color: #ffffff;
     width: 100%;
     height: 100%;
-    box-shadow: rgba(131, 131, 131, 0.492) 0px 0px 20px 10px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 0px 30px 10px;
   }
 
   #navigation .container {
@@ -563,7 +563,7 @@
     border-radius: 0 0 0.375em 0.375em;
     z-index: -1;
     overflow: hidden;
-    box-shadow: rgba(149, 157, 165, 0.089) 0px 8px 24px;
+    box-shadow: rgba(0, 0, 0, 0.644) 0px 0px 30px 10px;
     background-color: #fff;
     top: 3.7rem;
     padding-top: 0;
@@ -630,11 +630,11 @@
     content: '';
     position: absolute;
     display: block;
-    height: 0.2rem;
+    height: 0.1rem;
     background: var(--primary);
     opacity: 1;
-    bottom: -.5rem;
-    border-radius: 0.25rem;
+    bottom: -.35rem;
+    border-radius: 0.1rem;
     left: -0.375rem;
     right: -0.375rem;
     z-index: -1;
@@ -642,10 +642,11 @@
 
   #navigation #navbar-menu.open {
     height: auto;
-    padding-top: 2.5rem;
-    padding-bottom: 2rem;
+    padding-top: 1.5rem;
+    padding-bottom: .5rem;
     z-index: -100;
     border-bottom: 1px solid #626262;
+    border-top: 2px solid #363535;
     border-right: 1px solid #626262;
     border-left: 1px solid #626262;
     font-size: 0.8rem;
